trunk/Archive2/51/045615b98c267b/output
main.cpp: In function 'int main()':
main.cpp:18:37: error: use of deleted function 'main()::<lambda()>::<lambda>(const main()::<lambda()>&)'
     std::function<void ()> fn(lambda);
                                     ^
main.cpp:14:35: note: 'main()::<lambda()>::<lambda>(const main()::<lambda()>&)' is implicitly deleted because the default definition would be ill-formed:
     auto lambda = [p(std::move(p))]() mutable {
                                   ^
main.cpp:14:35: error: use of deleted function 'std::unique_ptr<_Tp, _Dp>::unique_ptr(const std::unique_ptr<_Tp, _Dp>&) [with _Tp = int; _Dp = std::default_delete<int>]'
In file included from /usr/local/include/c++/4.9.0/memory:81:0,
                 from main.cpp:2:
/usr/local/include/c++/4.9.0/bits/unique_ptr.h:356:7: note: declared here
       unique_ptr(const unique_ptr&) = delete;
       ^
In file included from /usr/local/include/c++/4.9.0/memory:79:0,
                 from main.cpp:2:
/usr/local/include/c++/4.9.0/functional:2411:7: error:   initializing argument 1 of 'std::function<_Res(_ArgTypes ...)>::function(_Functor) [with _Functor = main()::<lambda()>; <template-parameter-2-2> = void; _Res = void; _ArgTypes = {}]'
       function<_Res(_ArgTypes...)>::
       ^
/usr/local/include/c++/4.9.0/functional: In instantiation of 'static void std::_Function_base::_Base_manager<_Functor>::_M_clone(std::_Any_data&, const std::_Any_data&, std::false_type) [with _Functor = main()::<lambda()>; std::false_type = std::integral_constant<bool, false>]':
/usr/local/include/c++/4.9.0/functional:1914:51:   required from 'static bool std::_Function_base::_Base_manager<_Functor>::_M_manager(std::_Any_data&, const std::_Any_data&, std::_Manager_operation) [with _Functor = main()::<lambda()>]'
/usr/local/include/c++/4.9.0/functional:2421:19:   required from 'std::function<_Res(_ArgTypes ...)>::function(_Functor) [with _Functor = main()::<lambda()>; <template-parameter-2-2> = void; _Res = void; _ArgTypes = {}]'
main.cpp:18:37:   required from here
/usr/local/include/c++/4.9.0/functional:1878:34: error: use of deleted function 'main()::<lambda()>::<lambda>(const main()::<lambda()>&)'
    __dest._M_access<_Functor*>() =
                                  ^
